# miHoYo-API-Wrapper

./: .env.example  .gitignore  Cargo.toml  readme.md
resources/: relic_info.json
src/: client.rs  error.rs  lib.rs  types.rs  typing.rs
src/component/: cache.rs  mod.rs  routes.rs
src/component/client/: base.rs  mod.rs
src/component/client/chronicle/: client.rs  genshin.rs  honkai.rs  mod.rs  starrail.rs
src/component/manager/: managers.rs  mod.rs
src/components/: base.rs  cache.rs  mod.rs
src/components/chronicle/: mod.rs  starrail.rs
src/components/managers/: manager.rs  mod.rs
src/components/models/: mod.rs
src/components/models/hoyolab/: mod.rs  record.rs
src/components/models/starrail/: mihomo.rs  mod.rs
src/components/utils/: constant.rs  mod.rs  route.rs  uid.rs
src/model/: mod.rs
src/model/genshin/: abyss.rs  activity.rs  base.rs  character.rs  mod.rs  notes.rs  stats.rs
src/model/honkai/: mod.rs  notes.rs  user.rs
src/model/hoyolab/: mod.rs  record.rs
src/model/starrail/: challenge.rs  character.rs  mod.rs  notes.rs  rogue.rs  stats.rs
src/model/starrail/mihomo/: mod.rs  relic.rs
src/util/: constants.rs  contain.rs  error.rs  kwargs.rs  mod.rs  uid.rs
