[package]
authors = [ "Ennui.lw" ]
edition = "2021"
description = "A API-Wrapper of miHoYo games in Rust"
keywords = [ "mihoyo", "hoyoverse", "genshin", "starrail" ]
license = "MIT"
name = "miHoYo-API"
repository = "https://github.com/wuliao97/miHoYoAPI-Wrapper"
version = "0.1.6"

[features]
default = ["genshin", "honkai", "starrail"]
genshin = []
honkai = []
starrail = []


[dependencies]
async-trait = "0.1.72"
anyhow = "1.0.72"
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
rand = "0.8.5"
rust-crypto = "0.2.36"

[dependencies.reqwest]
version = "0.11.7"
features = [
    "json",
    "multipart",
    "stream",
    "cookies"
]

[dependencies.tokio]
version = "1.33"
features = ["macros"]