[package]
authors = [ "Ennui.lw" ]
description = "A API-Wrapper of miHoYo games in Rust"
categories = [ "API", "API-Wrapper" ]
edition = "2021"
keywords = [ "mihoyo", "hoyoverse", "genshin", "starrail" ]
license = "MIT"
name = "miHoYo-API"
repository = "https://github.com/miHoYo-API/miHoYo-API-Wrapper"
version = "0.1.8"


[features]
default = [ "genshin", "honkai", "starrail" ]
genshin = []
honkai = []
starrail = ["mihomo"]
mihomo = []
full = ["genshin", "honkai", "starrail"]


[dependencies]
async-trait = "0.1.72"
anyhow = "1.0.72"
dotenv = "0.15.0"
once_cell = "1.18.0"
serde_json = "1.0.107"
rand = "0.8.5"
rust-crypto = "0.2.36"
thiserror = "1.0.50"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = [
    "json",
    "multipart",
    "stream",
    "cookies"
]

[dependencies.tokio]
version = "1.33"
features = ["macros"]
